# rs-matter-example

./: .gitignore  .gitmodules  Cargo.toml  sdkconfig.defaults
src/: humidity_measurement.rs  main.rs  temperature_measurement.rs
